<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/logo_description"
                android:layout_gravity="center"
                android:src="@drawable/droidboot"
                app:tint="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/padding_double"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/app_name_droid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.02"
                    android:text="@string/app_name_droid"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/app_name_boot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.02"
                    android:text="@string/app_name_boot"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="24sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:paddingStart="@dimen/padding_double"
                android:paddingEnd="@dimen/padding_double"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_shape"
                android:ems="10"
                android:hint="@string/edit_mail_hint"
                android:inputType="textEmailAddress"
                android:padding="@dimen/default_padding" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:paddingStart="@dimen/padding_double"
                android:paddingEnd="@dimen/padding_double"
                android:autofillHints="password"
                android:background="@drawable/rounded_shape"
                android:ems="10"
                android:hint="@string/edit_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/default_padding" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/login_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/signup_button"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>